--- a/src/Mobile/LazyWelfare.AndroidMobile/Properties/AndroidManifest.xml
+++ b/src/Mobile/LazyWelfare.AndroidMobile/Properties/AndroidManifest.xml
@@ -1,15 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" 
-          package="LazyWelfare.AndroidMobile.LazyWelfare.AndroidMobile" 
-          android:versionCode="1" 
-          android:versionName="1.0" 
-          android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" />
-	<application android:allowBackup="true" > </application>
-  <uses-permission android:name="android.permission.CAMERA" />
-  <uses-permission android:name="android.permission.VIBRATE" />
-  <uses-feature android:name="android.hardware.autofocus"/>
-  <uses-permission android:name="android.permission.FLASHLIGHT"/>
-  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-  <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="LazyWelfare.AndroidMobile.LazyWelfare.AndroidMobile" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="23" />
+	<application android:allowBackup="true" android:label="小蓝人"></application>
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.VIBRATE" />
+	<uses-feature android:name="android.hardware.autofocus" />
+	<uses-permission android:name="android.permission.FLASHLIGHT" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
