--- a/src/Mobile/LazyWelfare.AndroidMobile/packages.config
+++ b/src/Mobile/LazyWelfare.AndroidMobile/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid60" />
+  <package id="Glide.Xamarin" version="3.8.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="ZXing.Net.Mobile" version="1.4.6" targetFramework="monoandroid60" />
