分离图片选择插件

--- a/src/Mobile/LazyWelfare.AndroidMobile/LazyWelfare.AndroidMobile.csproj
+++ b/src/Mobile/LazyWelfare.AndroidMobile/LazyWelfare.AndroidMobile.csproj
@@ -79,8 +79,6 @@
   <ItemGroup>
     <Compile Include="Core\Appcation.cs" />
     <Compile Include="Core\BulbActivity.cs" />
-    <Compile Include="Core\BulbPlugin.cs" />
-    <Compile Include="ImageSelect\ImageSelectActivity.cs" />
     <Compile Include="Core\ImageTextButton.cs" />
     <Compile Include="Core\ScanPlugin.cs" />
     <Compile Include="Core\SharedStoreService.cs" />
@@ -94,21 +92,6 @@
     <Compile Include="AgreementRoute\ScanAgreement.cs" />
     <Compile Include="Core\AndroidScript.cs" />
     <Compile Include="Core\SharedPreferences.cs" />
-    <Compile Include="ImageSelect\Adapter\AlbumAdapter.cs" />
-    <Compile Include="ImageSelect\Adapter\PictureAdapter.cs" />
-    <Compile Include="ImageSelect\Control\AlbumCollection.cs" />
-    <Compile Include="ImageSelect\Control\PictureCollection.cs" />
-    <Compile Include="ImageSelect\Control\SelectedUriCollection.cs" />
-    <Compile Include="ImageSelect\Engine\CustomEngine.cs" />
-    <Compile Include="ImageSelect\Engine\GlideEngine.cs" />
-    <Compile Include="ImageSelect\Engine\LoadEngine.cs" />
-    <Compile Include="ImageSelect\Loader\AlbumLoader.cs" />
-    <Compile Include="ImageSelect\Loader\PictureLoader.cs" />
-    <Compile Include="ImageSelect\MimeType.cs" />
-    <Compile Include="ImageSelect\Model\Album.cs" />
-    <Compile Include="ImageSelect\Model\Picture.cs" />
-    <Compile Include="ImageSelect\Model\SelectionSpec.cs" />
-    <Compile Include="ImageSelect\Widget\GridViewItemRelativeLayout.cs" />
     <Compile Include="Logic\Define.cs" />
     <Compile Include="Logic\HostStoreService.cs" />
     <Compile Include="Models\AppModel.cs" />
@@ -119,14 +102,6 @@
     <Compile Include="Core\SplashScreenActivity.cs" />
     <Compile Include="Core\TaskResult.cs" />
     <Compile Include="Core\Template.cs" />
-    <Compile Include="Utils\BundleUtils.cs" />
-    <Compile Include="Utils\CollectionExtension.cs" />
-    <Compile Include="Utils\ExifInterfaceCompat.cs" />
-    <Compile Include="Utils\HandlerUtils.cs" />
-    <Compile Include="Utils\MediaStoreCompat.cs" />
-    <Compile Include="Utils\ParcelUtils.cs" />
-    <Compile Include="Utils\PhotoMetadataUtils.cs" />
-    <Compile Include="Utils\WeakReferenceExtension.cs" />
     <Compile Include="Views\Partials\HomeView.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -186,6 +161,10 @@
     <ProjectReference Include="..\..\Core\LazyWelfare.Service\LazyWelfare.Common.csproj">
       <Project>{194258ba-bd69-417b-8773-015471508cb4}</Project>
       <Name>LazyWelfare.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\LazyWelfare.AndroidMobile.ImageSelect\LazyWelfare.AndroidMobile.ImageSelect.csproj">
+      <Project>{042B5E23-3EC9-4C6F-B6A3-BBD23759309D}</Project>
+      <Name>LazyWelfare.AndroidMobile.ImageSelect</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -256,83 +235,6 @@
   <ItemGroup>
     <AndroidResource Include="Resources\layout\ImageTextButton.axml">
       <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xhdpi\gallery_back.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xhdpi\gallery_down.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xhdpi\gallery_up.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\ic_camera.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\image_not_exist.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\pick_photo_checkbox_check.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable-xxhdpi\pick_photo_checkbox_normal.png">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\ImageSelect.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\ImageSelect_IncludeTop.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\values\colors.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\ImageSelect_PhotoPickListItem.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\anim\listview_down.xml">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-    <AndroidResource Include="Resources\layout\ImageSelect_PhotoPickGridListItem.axml">
-      <SubType>Designer</SubType>
-    </AndroidResource>
-    <AndroidResource Include="Resources\drawable\pick_photo_checkbox.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\anim\listview_fade_in.xml">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\anim\listview_fade_out.xml">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
-    </AndroidResource>
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\anim\listview_up.xml">
-      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
     </AndroidResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
