--- a/src/Server/LazyWelfare.ServerWeb/LazyWelfare.ServerWeb.csproj
+++ b/src/Server/LazyWelfare.ServerWeb/LazyWelfare.ServerWeb.csproj
@@ -10,8 +10,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Common.Logging" Version="3.4.1" />
+    <PackageReference Include="Common.Logging.Log4Net1215" Version="3.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="ZKWeb.System.Drawing" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -21,6 +24,11 @@
   <ItemGroup>
     <None Include="wwwroot\css\ComicSansMSRegular.ttf" />
     <None Include="wwwroot\images\33f5a319ebc4b74532a0bbd2c4fc1e178b821559.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\LazyWelfare.Service\LazyWelfare.Common.csproj" />
+    <ProjectReference Include="..\LazyWelfare.ServerCore\LazyWelfare.ServerCore.csproj" />
   </ItemGroup>
 
 </Project>
