--- a/src/Server/LazyWelfare.ServerWeb/LazyWelfare.ServerWeb.csproj
+++ b/src/Server/LazyWelfare.ServerWeb/LazyWelfare.ServerWeb.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Common.Logging" Version="3.4.1" />
     <PackageReference Include="Common.Logging.Log4Net1215" Version="3.4.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="ZKWeb.System.Drawing" Version="4.0.1" />
   </ItemGroup>
