--- a/src/Mobile/LazyWelfare.AndroidMobile/packages.config
+++ b/src/Mobile/LazyWelfare.AndroidMobile/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.4.0.1" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.4.0.1" targetFramework="monoandroid60" />
   <package id="ZXing.Net.Mobile" version="2.3.2" targetFramework="monoandroid60" />
 </packages>
